test case added service for brand, category, subcategory, product, stock